--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@ __screenshots__/
 # System files
 .DS_Store
 Thumbs.db
+
+# 🧩 Environment files (añadir esto)
+src/environments/environment.ts
+src/environments/environment.prod.ts
