--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "ng build --configuration production",
     "vercel-build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "postinstall": "npm install --legacy-peer-deps"
   },
   "prettier": {
     "printWidth": 100,
@@ -23,7 +24,7 @@
     ]
   },
   "dependencies": {
-    "@angular/animations": "^17.3.0",
+    "@angular/animations": "^20.3.0",
     "@angular/common": "^20.3.0",
     "@angular/compiler": "^20.3.0",
     "@angular/core": "^20.3.0",
