--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --configuration production",
-    "vercel-build": "ng build --configuration production",
+    "vercel-build": "npm install --legacy-peer-deps && ng build --configuration production",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "postinstall": "npm install --legacy-peer-deps"
+    "test": "ng test"
   },
   "prettier": {
     "printWidth": 100,
@@ -24,14 +23,14 @@
     ]
   },
   "dependencies": {
-    "@angular/animations": "^20.3.0",
-    "@angular/common": "^20.3.0",
+    "@angular/animations": "^20.3.9",
+    "@angular/common": "^20.3.9",
     "@angular/compiler": "^20.3.0",
-    "@angular/core": "^20.3.0",
-    "@angular/forms": "^20.3.0",
-    "@angular/platform-browser": "^20.3.0",
-    "@angular/platform-browser-dynamic": "^20.3.0",
-    "@angular/router": "^20.3.0",
+    "@angular/core": "^20.3.9",
+    "@angular/forms": "^20.3.9",
+    "@angular/platform-browser": "^20.3.9",
+    "@angular/platform-browser-dynamic": "^20.3.9",
+    "@angular/router": "^20.3.9",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
